--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@ Click to show distance on a particular date.
 	</div>
 	<canvas onClick="onClick(event);" id="canvas" height="800" width="800"></canvas>
 
+<div>
+Code shamelessly ripped from <a href="http://www.physics.emory.edu/astronomy/events/mars/calc.html">the Mars Geocentric Distance calculator</a>, which is graciously provided by the Emory Department of Physics.
+</div>
 </body>
 </html>
