--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-59775074-2"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag() {
+  		dataLayer.push(arguments);
+  	}
+  	gtag("js", new Date());
+
+	gtag("config", "UA-59775074-2");
+</script>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <title>Mars Finder</title>
 <link rel="stylesheet" type="text/css" href="style.css" />
