--- a/index.html
+++ b/index.html
@@ -1,34 +1,38 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-<head>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-59775074-2"></script>
-<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag() {
-  		dataLayer.push(arguments);
-  	}
-  	gtag("js", new Date());
 
-	gtag("config", "UA-59775074-2");
-</script>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<title>Mars Finder</title>
-<link rel="stylesheet" type="text/css" href="style.css" />
-<script src="mars_calc_V4.js"></script>
-<script src="vsop87.js"></script>
-<script src="main.js"></script>
-</head>
-<body onLoad="onLoad();">
-	<h1>Mars Finder</h1>
-	<div>
-Shows Mars distance from Earth, measured in <a href="https://en.wikipedia.org/wiki/Astronomical_unit">astronomical units (AU)</a>.<br/>
-Click to show distance on a particular date.	
-	</div>
-	<canvas onClick="onClick(event);" id="canvas" height="800" width="800"></canvas>
+	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-59775074-2"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag("js", new Date());
 
-<div>
-Code shamelessly ripped from <a href="http://www.physics.emory.edu/astronomy/events/mars/calc.html">the Mars Geocentric Distance calculator</a>, which is graciously provided by the Emory Department of Physics.
-</div>
-</body>
+			gtag("config", "UA-59775074-2");
+		</script>
+		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+		<title>Mars Finder</title>
+		<link rel="stylesheet" type="text/css" href="style.css" />
+		<script src="mars_calc_V4.js"></script>
+		<script src="vsop87.js"></script>
+		<script src="main.js"></script>
+	</head>
+
+	<body onLoad="onLoad();">
+		<h1>Mars Finder</h1>
+		<div>
+			Shows Mars distance from Earth, measured in <a href="https://en.wikipedia.org/wiki/Astronomical_unit">astronomical units (AU)</a>.<br />
+			Point mouse to show distance on a particular date.
+		</div>
+		<canvas onMouseMove="onMouseMove(event);" id="canvas" height="800" width="800"></canvas>
+
+		<div id="credit">
+			Code shamelessly ripped from <a href="http://www.physics.emory.edu/astronomy/events/mars/calc.html">the Mars Geocentric Distance calculator</a>, which is graciously
+			provided by the Emory Department of Physics.
+		</div>
+	</body>
+
 </html>
